# todo-list

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/cli/: cli.py
src/config/: settings.py
src/exceptions/: todo_exceptions.py
src/models/: project.py  task.py
src/repositories/: memory_repository.py
